--- a/ng-admin/src/tobacco-management/visit-task/task-detail/examine-detail-modal/examine-detail-modal.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/task-detail/examine-detail-modal/examine-detail-modal.component.html
@@ -1,11 +1,12 @@
-<nz-modal [(nzVisible)]="isVisible" nzWidth="760px" nzMaskClosable="false" nzTitle="新建考核项" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
+<nz-modal [(nzVisible)]="isVisible" nzWidth="760px" nzMaskClosable="false" nzTitle="新建考核项" [nzContent]="modalContent"
+    (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
     <ng-template #modalContent>
         <!-- <nz-card [nzBordered]="false" *ngIf="isVisible"> -->
         <form nz-form [formGroup]="validateForm" *ngIf="taskExamine">
             <nz-form-item nz-row>
                 <nz-form-label nz-col [nzSm]="4" nzFor="teName" nzRequired>考核项名称</nz-form-label>
                 <nz-form-control [nzSm]="20" nzHasFeedback>
-                    <input nz-input formControlName="teName" id="teName" [(ngModel)]="taskExamine.name">
+                    <input nz-input formControlName="teName" id="teName" [(ngModel)]="taskExamine.name" placeholder="输入考核项名称">
                     <nz-form-explain *ngIf="validateForm.get('teName').dirty&&validateForm.get('teName').hasError('maxlength')">字符长度小于等于50</nz-form-explain>
                     <nz-form-explain *ngIf="validateForm.get('teName').dirty&&validateForm.get('teName').hasError('required')">请输入考核项名称</nz-form-explain>
                 </nz-form-control>
@@ -13,14 +14,25 @@
             <nz-form-item nz-row>
                 <nz-form-label nz-col [nzSm]="4" nzFor="teDesc">考核项描述</nz-form-label>
                 <nz-form-control [nzSm]="20" nzHasFeedback>
-                    <textarea nz-input row="3" formControlName="teDesc" id="teDesc" [(ngModel)]="taskExamine.desc"></textarea>
+                    <textarea nz-input row="3" formControlName="teDesc" id="teDesc" [(ngModel)]="taskExamine.desc"
+                        placeholder="输入考核项描述"></textarea>
                     <nz-form-explain *ngIf="validateForm.get('teDesc').dirty&&validateForm.get('teDesc').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item nz-row>
+                <nz-form-label nz-col [nzSm]="4" nzFor="teDesc" nzRequired>考核指标</nz-form-label>
+                <nz-form-control [nzSm]="20" nzHasFeedback>
+                    <nz-select [(ngModel)]="taskExamine.examineOption" formControlName="teExamineOption" id="teExamineOption"
+                        nzPlaceHolder="选择考核指标">
+                        <nz-option *ngFor="let o of examineOptions" [nzValue]="o.id" [nzLabel]="o.text"></nz-option>
+                    </nz-select>
+                    <nz-form-explain *ngIf="validateForm.get('teExamineOption').dirty&&validateForm.get('teExamineOption').hasError('required')">请选择考核指标</nz-form-explain>
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item nz-row>
                 <nz-form-label nz-col [nzSm]="4" nzFor="teSeq">考核项序号</nz-form-label>
                 <nz-form-control [nzSm]="20" nzHasFeedback>
-                    <input nz-input formControlName="teSeq" id="teSeq" [(ngModel)]="taskExamine.seq">
+                    <input nz-input formControlName="teSeq" id="teSeq" [(ngModel)]="taskExamine.seq" placeholder="请输入考核项序号">
                     <nz-form-explain *ngIf="validateForm.get('teSeq').dirty&&validateForm.get('teSeq').hasError('pattern')">请输入正整数</nz-form-explain>
                 </nz-form-control>
             </nz-form-item>
@@ -31,7 +43,8 @@
         <button nz-button [nzType]="'default'" type="button" (click)="handleCancel($event)">
             取消
         </button>
-        <button nz-button [nzType]="'primary'" type="button" (click)="SelectTaskExamine(taskExamine)" [nzLoading]="eloading" [disabled]="!validateForm.valid">
+        <button nz-button [nzType]="'primary'" type="button" (click)="SelectTaskExamine(taskExamine)" [nzLoading]="eloading"
+            [disabled]="!validateForm.valid">
             保存
         </button>
     </ng-template>
