--- a/ng-admin/src/configs/data-config/data-config-create/data-config-create.component.html
+++ b/ng-admin/src/configs/data-config/data-config-create/data-config-create.component.html
@@ -29,11 +29,10 @@
                     </nz-form-control>
                 </nz-form-item>
                 <nz-form-item nz-row>
-                    <nz-form-label [nzSm]="5" [nzXs]="24" nzRequired nzFor="desc">配置项</nz-form-label>
+                    <nz-form-label [nzSm]="5" [nzXs]="24" nzFor="desc">配置项</nz-form-label>
                     <nz-form-control [nzSm]="19" nzHasFeedback>
                         <input nz-input formControlName="desc" [(ngModel)]="dataconfig.desc" id="desc">
                         <nz-form-explain *ngIf="form.get('desc').dirty&&form.get('desc').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
-                        <nz-form-explain *ngIf="form.get('desc').dirty&&form.get('desc').hasError('required')">请输入描述</nz-form-explain>
                     </nz-form-control>
                 </nz-form-item>
                 <nz-form-item nz-row>
