--- a/ng-admin/src/tobacco-management/visit-task/task-detail/task-detail.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/task-detail/task-detail.component.html
@@ -21,7 +21,7 @@
                         <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('required')">请输入任务名称</nz-form-explain>
                     </nz-form-control>
                 </nz-form-item>
-                <nz-form-item nz-row style="margin-bottom: 0px;">
+                <nz-form-item nz-row style="margin-bottom: 0px;" *ngIf="task.type != 5">
                     <nz-form-label nz-col [nzSm]="4" nzFor="isExamine" nzRequired>是否需要考核</nz-form-label>
                     <nz-form-control nz-col [nzSm]="20">
                         <nz-radio-group formControlName="isExamine" [(ngModel)]="task.isExamine" class="mb-md">
