--- a/ng-admin/src/documents/document/category/category.component.html
+++ b/ng-admin/src/documents/document/category/category.component.html
@@ -1,5 +1,5 @@
 <div nz-row>
-    <div nz-col nzSpan="18" style="padding-right:10px;">
+    <div nz-col nzSpan="15" style="padding-right:10px;">
         <nz-input-group nzSearch [nzSuffix]="suffixButton">
             <input type="text" [(ngModel)]="searchName" nz-input placeholder="分类名称">
         </nz-input-group>
@@ -7,15 +7,15 @@
             <button nz-button nzType="default" nzSearch><i class="anticon anticon-search"></i></button>
         </ng-template>
     </div>
-    <div nz-col nzSpan="6" style="text-align:center;">
+    <div nz-col nzSpan="9" style="text-align:center;">
         <button nz-button type="button" (click)="create('click')" nzType="primary">添加分类</button>
     </div>
 </div>
 <div nz-row>
     <div nz-col nzSpan="24">
         <div *ngIf="nodes && nodes.length > 0">
-            <nz-tree #treeCom [nzData]="nodes" nzMultiple="true" (nzClick)="activeNode($event)" [nzSearchValue]="searchName"
-                (nzSearchValueChange)="nzEvent($event)" (nzDblClick)="openFolder($event)">
+            <nz-tree #treeCom [nzData]="nodes" nzMultiple="true" (nzClick)="activeNode($event)"
+                [nzSearchValue]="searchName" (nzSearchValueChange)="nzEvent($event)" (nzDblClick)="openFolder($event)">
                 <ng-template #contextTemplate>
                     <ul nz-menu nzInDropDown>
                         <li nz-menu-item (click)="edit()">修改分类</li>
@@ -39,7 +39,8 @@
                 </ng-template>
             </nz-tree>
         </div>
-        <div *ngIf="!nodes || nodes.length == 0" style="width:100%; text-align:left; padding-top: 15px; padding-bottom: 15px; color: grey;">
+        <div *ngIf="!nodes || nodes.length == 0"
+            style="width:100%; text-align:left; padding-top: 15px; padding-bottom: 15px; color: grey;">
             没有分类数据，点击“添加分类”进行添加
         </div>
     </div>
