--- a/ng-admin/src/documents/document/category/edit-category/edit-category.component.html
+++ b/ng-admin/src/documents/document/category/edit-category/edit-category.component.html
@@ -22,7 +22,8 @@
                 <button nz-button type="button" [disabled]="saving" (click)="close()">
                     {{l("Cancel")}}
                 </button>
-                <button nz-button [nzType]="'primary'" type="button" (click)="submit()" [disabled]="!validateForm.valid">
+                <button nz-button [nzType]="'primary'" type="button" (click)="submit()"
+                    [disabled]="!validateForm.valid">
                     {{l("Save")}}
                 </button>
             </div>
